# agent-filesystem

./: AGENTS.md  README.md
cmd/afs/: afs_commands.go  afs_commands_test.go  afs_hash.go  afs_mcp.go  afs_mcp_test.go  afs_query_commands.go  afs_query_commands_test.go  afs_query_index_commands.go  afs_setup_test.go  afs_surface_test.go  auth_commands.go  auth_commands_test.go  backend.go  backend_test.go  config_commands.go  config_commands_test.go  config_state.go  controlplane_http_client.go  controlplane_http_client_test.go  daemon_commands.go  database_commands.go  database_commands_test.go  fs_remote_commands_test.go  main.go  mount_commands.go  mount_commands_test.go  mount_reconcile.go  mount_state.go  mount_state_test.go  path_helpers.go  service_lifecycle.go  setup_wizard.go  status_display.go  sync_control.go  sync_daemon.go  sync_full_reconciler.go  sync_lifecycle.go  token_commands.go  token_commands_test.go  ui_test.go  (+7 more)
deploy/vercel/: main.go  main_test.go
docs/guides/: agent-filesystem.md
docs/internals/: cloud.md
module/: fs.xo  path.xo
plans/: api-keys-unification.md  file-query.md  search-semantic.md  volume-workspace-model.md  volume-workspace-surfaces.md
scripts/: loadtest_cloud_workspaces.py  test_harness.py
sdk/python/: README.md  api-docs.md  pyproject.toml
sdk/python/src/redis_afs/: __init__.py  _mcp.py  _paths.py  client.py  errors.py  models.py
sdk/python/src/redis_afs/aio/: __init__.py  _http.py  _mount.py  _resources.py  _sync.py
sdk/python/tests/: test_aio.py  test_client.py
ui/: package-lock.json  package.json
(+151 files in other folders)
